syntax = "proto3";

package metrics;

option go_package = "internal/proto";

message Metric {
  string ID = 1;
  enum MetricType {
      GAUGE = 0;
      COUNTER = 1;
  }
  MetricType MType = 2;
  double Value = 3;
  int64 Delta = 4;
}

message SaveMetricsBatchRequest {
  repeated Metric metrics = 1;
}

message SaveMetricsBatchResponse {
  string error = 1;
}

message GetMetricRequest {
  Metric metrics = 1;
}

message GetMetricResponse {
  string error = 1;
  Metric metric = 2;
}

service Metrics {
  rpc SaveMetricsBatch(SaveMetricsBatchRequest) returns (SaveMetricsBatchResponse);
  rpc GetMetric(GetMetricRequest) returns (GetMetricResponse);
}